RESOLVED FIXED216053
[ANGLE] InternalFormat::blendSupport is uninitialized by constructor
https://bugs.webkit.org/show_bug.cgi?id=216053
Summary [ANGLE] InternalFormat::blendSupport is uninitialized by constructor
David Kilzer (:ddkilzer)
Reported 2020-09-01 14:09:28 PDT
InternalFormat::blendSupport is uninitialized by its constructor. Found by clang static analyzer using the optin.cplusplus.UninitializedObject checker.
Attachments
Patch v1 (2.65 KB, patch)
2020-09-01 14:11 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-09-01 14:09:42 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-09-01 14:11:14 PDT
Created attachment 407713 [details] Patch v1
EWS Watchlist
Comment 3 2020-09-01 14:11:45 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Kenneth Russell
Comment 4 2020-09-01 14:12:52 PDT
CC'ing ANGLE team members - likely want this to be upstreamed to ANGLE.
Kenneth Russell
Comment 5 2020-09-01 14:13:48 PDT
Comment on attachment 407713 [details] Patch v1 Looks good to me.
David Kilzer (:ddkilzer)
Comment 6 2020-09-01 14:14:43 PDT
Regressed in WebKit tree with Bug 206318 with commit r255782, which itself was a mere from upstream ANGLE.
David Kilzer (:ddkilzer)
Comment 7 2020-09-01 14:17:34 PDT
(In reply to Kenneth Russell from comment #4) > CC'ing ANGLE team members - likely want this to be upstreamed to ANGLE. Filed to track upstream: <https://bugs.chromium.org/p/angleproject/issues/detail?id=5008>
David Kilzer (:ddkilzer)
Comment 8 2020-09-01 18:47:20 PDT
Comment on attachment 407713 [details] Patch v1 Marking cq+ since ios-wk2 is failing due to a progression, mac-debug-wk1 has 19 scheduled test runs queued, and all other tests passed.
EWS
Comment 9 2020-09-01 18:55:35 PDT
Committed r266445: <https://trac.webkit.org/changeset/266445> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407713 [details].
Note You need to log in before you can comment on or make changes to this bug.