[ANGLE] InternalFormat::blendSupport is uninitialized by constructor <https://webkit.org/b/216053> <rdar://problem/68166032>

Reviewed by Kenneth Russell.

* changes.diff: Add this patch.
* src/libANGLE/formatutils.cpp:
(gl::InternalFormat::InternalFormat):
- Initialize blendSupport to NeverSupported.


Canonical link: https://commits.webkit.org/228850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266445 268f45cc-cd09-0410-ab3c-d52691b4dbfc